--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,8 @@
     "angular-route": "~1.4.6",
     "angular-aria": "~1.4.6",
     "raphael": "~2.1.4",
-    "moment": "momentjs#~2.10.6"
+    "moment": "momentjs#~2.10.6",
+    "Ionicons": "ionicons#~2.0.1"
   },
   "todo_install": {
     "aterrien/jQuery-Knob": "jquery-knob#~1.2.11"
