--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,8 @@
     "angular-aria": "~1.4.6",
     "raphael": "~2.1.4",
     "moment": "momentjs#~2.10.6",
-    "Ionicons": "ionicons#~2.0.1"
+    "Ionicons": "ionicons#~2.0.1",
+    "angular-ui-router": "~0.2.15"
   },
   "todo_install": {
     "aterrien/jQuery-Knob": "jquery-knob#~1.2.11"
