--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,8 @@
     "raphael": "~2.1.4",
     "moment": "momentjs#~2.10.6",
     "Ionicons": "ionicons#~2.0.1",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "ng-file-upload": "~9.0.6"
   },
   "todo_install": {
     "aterrien/jQuery-Knob": "jquery-knob#~1.2.11"
