--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-usemin": "^0.3.14",
     "gulp-webserver": "^0.9.1",
     "imagemin-pngquant": "^4.2.0",
+    "json-server": "^0.8.0",
     "rimraf": "^2.4.3"
   }
 }
