--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,8 @@
     "moment": "momentjs#~2.10.6",
     "Ionicons": "ionicons#~2.0.1",
     "angular-ui-router": "~0.2.15",
-    "ng-file-upload": "~9.0.6"
+    "ng-file-upload": "~9.0.6",
+    "angular-xeditable": "~0.1.9"
   },
   "todo_install": {
     "aterrien/jQuery-Knob": "jquery-knob#~1.2.11"
