--- a/bower.json
+++ b/bower.json
@@ -46,7 +46,6 @@
     "Ionicons": "ionicons#~2.0.1",
     "angular-ui-router": "~0.2.15",
     "ng-file-upload": "~9.0.6",
-    "angular-xeditable": "~0.1.9",
-    "aterrien/jQuery-Knob": "jknob#~1.2.11"
+    "angular-xeditable": "~0.1.9"
   }
 }
