--- a/bower.json
+++ b/bower.json
@@ -46,6 +46,8 @@
     "Ionicons": "ionicons#~2.0.1",
     "angular-ui-router": "~0.2.15",
     "ng-file-upload": "~9.0.6",
-    "angular-xeditable": "~0.1.9"
+    "angular-xeditable": "~0.1.9",
+    "intro.js": "~1.1.1",
+    "angular-intro.js": "~1.3.0"
   }
 }
