--- a/bower.json
+++ b/bower.json
@@ -48,6 +48,7 @@
     "ng-file-upload": "~9.0.6",
     "angular-xeditable": "~0.1.9",
     "intro.js": "~1.1.1",
-    "angular-intro.js": "~1.3.0"
+    "angular-intro.js": "~1.3.0",
+    "angular-base64-upload": "~0.1.13"
   }
 }
